--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,13 +1,16 @@
-FROM alpine:3.14
+FROM alpine:3.18.5
 
-RUN \
-  apk update update && apk add --no-cache \
+RUN apk add --no-cache \
     bash \
     blkid \
     e2fsprogs \
     mdadm \
     nvme-cli \
     util-linux
+
 COPY eks-nvme-ssd-provisioner.sh /usr/local/bin/
+
+RUN adduser -D nonrootuser
+USER nonrootuser
 
 ENTRYPOINT ["eks-nvme-ssd-provisioner.sh"]
