--- a/helm/eks-nvme-ssd-provisioner/values.yaml
+++ b/helm/eks-nvme-ssd-provisioner/values.yaml
@@ -2,7 +2,7 @@ automountServiceAccountToken: false
 priorityClassName: system-node-critical
 
 image:
-  repository: eu.gcr.io/brunsgaard-public/eks-nvme-ssd-provisioner
+  repository: nethermindeth/eks-nvme-ssd-provisioner
   pullPolicy: IfNotPresent
   tag: v1.0.0
 
